--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,9 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-               <sonar.host.url>https://sonar-java-sonar-nexus.apps.cluster-mz8m9.mz8m9.sandbox2638.opentlc.com/</sonar.host.url>
-	       <sonar.login>sqa_cda44e15e7b1008e3de3c7516308d137898813c2</sonar.login>
-               <sonar.projectName>springboot</sonar.projectName>
+               <sonar.host.url>https://sonar-new-java.apps.cluster-dvcxg.dvcxg.sandbox3006.opentlc.com/</sonar.host.url>
+	       <sonar.login>sqa_95416774fc4509a6f0dfae003065b905c58fceee</sonar.login>
+               <sonar.projectName>demo</sonar.projectName>
                <sonar.projectVersion>main</sonar.projectVersion>
                <sonar.test.exclusions>**/test/**/*.*</sonar.test.exclusions>
                <sonar.exclusions>**/*.java,**/ai/**/*.*,**/jdbc/**/*.*,**/mpt/**/*.*,**/jcr/**/*.*,**/JDBC*</sonar.exclusions>
@@ -81,12 +81,12 @@
 
     <distributionManagement>
         <snapshotRepository>
-          <id>sumit-snap1</id>
-          <url>http://nexus-java-sonar-nexus.apps.cluster-mz8m9.mz8m9.sandbox2638.opentlc.com/repository/sumit-snap1/</url>
+          <id>adhi-snap</id>
+          <url>http://nexus-new-java.apps.cluster-dvcxg.dvcxg.sandbox3006.opentlc.com/repository/adhi-snap/</url>
         </snapshotRepository>
         <repository>
-          <id>sumit-snap1</id>
-          <url>http://nexus-java-sonar-nexus.apps.cluster-mz8m9.mz8m9.sandbox2638.opentlc.com/repository/sumit-snap1/</url>
+          <id>adhi-snap</id>
+          <url>http://nexus-new-java.apps.cluster-dvcxg.dvcxg.sandbox3006.opentlc.com/repository/adhi-snap/</url>
         </repository>
       
     </distributionManagement>
